--- a/src/index.css
+++ b/src/index.css
@@ -796,7 +796,6 @@ td {
 
 .name {
   width: 100%;
-  /* margin-top: 5px; */
 }
 
 .phone {
@@ -934,6 +933,7 @@ td {
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  margin-top: -15px;
 }
 
 .nameUser-of-delete {
@@ -942,15 +942,6 @@ td {
   font-weight: 400;
   text-align: center;
 }
-
-/* .swal-modal {
-  background-color: #e4e6e5;
-  border: 0px solid white;
-} */
-
-/* .swal-overlay {
-  background-color: rgba(43, 165, 137, 0.45);
-} */
 
 .divider {
   width: 100%;
@@ -983,7 +974,7 @@ td {
   font-weight: 200;
   width: 100%;
   margin-top: 20px;
-  margin-bottom: 25px;
+  margin-bottom: 15px;
 }
 
 .btn-submit-delete {
@@ -1226,11 +1217,11 @@ td {
   margin-bottom: 3%;
   border: 0px;
   color: #fff;
-  border-radius: 5px;
-  -webkit-border-radius: 5px;
-  -moz-border-radius: 5px;
-  -ms-border-radius: 5px;
-  -o-border-radius: 5px;
+  border-radius: 30px;
+  -webkit-border-radius: 30px;
+  -moz-border-radius: 30px;
+  -ms-border-radius: 30px;
+  -o-border-radius: 30px;
 }
 
 .ddanger {
@@ -1750,6 +1741,7 @@ header .logo {
   height: 100% inherit;
   background-color: #2f33374d;
   width: 12%;
+  /* height: 100px; */
   font-size: 4.4rem;
   font-weight: 400;
   border-left: 7px solid #535554;
@@ -2016,6 +2008,7 @@ header .logo {
 
 .userscreen-fixinput {
   /* max-width: 100vw; */
+  /* height: 100vh; */
   min-height: 100vh;
   padding-bottom: 3px;
   /* padding: 10px 20px 10px 20px; */
@@ -2084,6 +2077,7 @@ header .logo {
   font-size: 1.8rem;
   font-weight: 300;
   width: 75%;
+  /* height: 100px; */
   text-align: center;
   padding: 18px;
   /* min-height: 100%; */
@@ -2375,6 +2369,7 @@ header .logo {
   justify-content: center;
   align-items: center;
   border-top: 1px solid #7679777e;
+  /* position: fixed; */
   /* padding-top: 60px; */
 }
 
@@ -2532,4 +2527,228 @@ header .logo {
 .pagination > li:last-child > a,
 .pagination > li:last-child > span {
   border-radius: unset;
+}
+
+/* *****************************************SWAL edit modal */
+.swal-modal {
+  background-color: #e4e6e5;
+  border: 0px solid white;
+}
+
+/* .swal-overlay {
+  background-color: rgba(43, 165, 137, 0.45);
+} */
+
+.swal-content {
+  padding: 0px 0px;
+  margin-top: 0px;
+}
+
+.swal-content:last-child {
+  margin-bottom: 0px;
+}
+
+.field-and-description-swal-edit {
+  display: flex;
+  /* justify-content: center; */
+  width: 100%;
+  /* margin-bottom: 10px; */
+}
+
+.field-description-swal-edit {
+  font-family: "Prompt";
+  font-size: 1.5rem;
+  font-weight: 400;
+  width: 45%;
+  /* margin-bottom: -5px; */
+  /* margin-left: 7%; */
+}
+
+#formcontrol-swal-edit {
+  background-color: #e4e6e573;
+  font-size: 1.4rem;
+  font-family: "Prompt";
+  font-weight: 300;
+  height: 35px;
+  border-radius: 8px;
+  -webkit-border-radius: 8px;
+  -moz-border-radius: 8px;
+  -ms-border-radius: 8px;
+  -o-border-radius: 8px;
+  /* padding-left: 20px; */
+  width: 86%;
+  border: 1px solid #6366653b;
+  margin-bottom: 9px;
+}
+
+#formcontrol-swal-edit-password {
+  background-color: #e4e6e5;
+  /* font-size: 1rem; */
+  font-family: "Prompt";
+  font-weight: 300;
+  height: 35px;
+  width: 86%;
+  /* border: 1px solid #6366653b; */
+  border-radius: 8px;
+  -webkit-border-radius: 8px;
+  -moz-border-radius: 8px;
+  -ms-border-radius: 8px;
+  -o-border-radius: 8px;
+  margin-bottom: 25px;
+  /* margin-left: -40px; */
+}
+
+.name-swal,
+.phone-swal,
+.username-swal {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+
+.error-helptext-swal-edit {
+  font-family: "Prompt";
+  font-size: 1rem;
+  font-weight: 400;
+  color: red;
+  margin-top: -5px;
+  margin-bottom: 0px;
+}
+
+.mix-btn-swal-edit {
+  margin-bottom: 10px;
+}
+
+.status-switch {
+  width: 100%;
+  margin-left: 20px;
+  margin-bottom: 11px;
+  margin-top: 12px;
+  display: flex;
+  justify-content: flex-start;
+}
+
+.extra-status {
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+
+.head-modal-and-icon-swal {
+  display: flex;
+  align-items: center;
+}
+
+.adduser-header-edit-modal-swal {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: #e4e6e5;
+}
+
+.adduser-head-swal-edit {
+  font-size: 3.5rem;
+  font-weight: 800;
+  font-family: "Prompt";
+  margin-top: 0px;
+  margin-bottom: 6px;
+  text-align: center;
+  letter-spacing: 1px;
+}
+
+.adduser-head-role-swal-edit {
+  font-size: 1.2rem;
+  font-weight: 500;
+  font-family: "Prompt";
+  margin-left: 3px;
+  color: #fff;
+  margin-bottom: 20px;
+  text-align: center;
+  letter-spacing: 1px;
+  width: 30%;
+  height: 25px;
+  background-color: #03a96cb4;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 15px;
+  -webkit-border-radius: 15px;
+  -moz-border-radius: 15px;
+  -ms-border-radius: 15px;
+  -o-border-radius: 15px;
+}
+
+.alert-delete-table {
+  font-size: 1.5rem;
+  font-family: "Prompt", sans-serif;
+  font-weight: 400;
+  width: 100%;
+  text-align: center;
+  margin-top: 10px;
+  /* color: #fff; */
+}
+
+#alert-delete-table {
+  border: 0px solid rgba(255, 0, 0, 0.664);
+  background-color: rgba(255, 0, 0, 0.13);
+  color: #000;
+}
+
+/* *******************************TEST  GRID */
+
+.grid-container {
+  display: grid;
+  grid-template-areas:
+    "header"
+    "main"
+    "footer";
+  grid-template-columns: 1fr;
+  grid-template-rows: 80px 1fr 60px;
+  min-height: 100vh;
+}
+
+.header {
+  grid-area: header;
+  /* background-color: #203040;
+  color: #ffffff;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0.5rem; */
+}
+
+.main {
+  grid-area: main;
+  background-color: #e4e6e5;
+}
+
+.footer {
+  grid-area: footer;
+  background-color: #203040;
+  color: #ffffff;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.userscreen-fixinput-grid {
+  min-height: 100% inherit;
+  background-color: #e4e6e5;
+}
+
+/* คล้าย background-inputfix */
+.background-inputfix-grid {
+  background: #bfc7c33d;
+  width: 100%;
+  min-height: 100vh;
+  /* height: 100% inherit; */
+  padding: 30px;
+  border-radius: 5px;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  -ms-border-radius: 5px;
+  -o-border-radius: 5px;
+  box-shadow: 0px 0px 10px 0px rgba(10, 10, 10, 0.404);
+  margin-bottom: 30px;
 }
