--- a/src/quries.css
+++ b/src/quries.css
@@ -119,6 +119,10 @@
     height: 25px;
   }
 
+  .process-name-true-2 {
+    font-size: 1.8rem;
+  }
+
   /* .footer-grid .footer-last {
     height: 0;
   } */
@@ -388,6 +392,25 @@
 
   #input-field-adduser-modal-password {
     width: 90%;
+  }
+
+  .name-descrip-pro-name-2 {
+    font-family: "Prompt";
+    font-size: 1.5rem;
+    background-color: #8da4c27e;
+    padding: 4px 10px 4px 10px;
+    border-radius: 8px;
+    -webkit-border-radius: 8px;
+    -moz-border-radius: 8px;
+    -ms-border-radius: 8px;
+    -o-border-radius: 8px;
+    margin-right: 10px;
+    font-weight: 500;
+    /* height: 100%; */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
   }
 
   /* .backAdmin { ตอนแรกไอแพไม่มี
@@ -837,7 +860,7 @@
     visibility: visible;
     font-size: 1.1rem;
     text-align: center;
-    height: 50px;
+    /* height: 50px; */
   }
 
   .input-header-big {
@@ -884,7 +907,8 @@
   }
 
   #back-icon {
-    font-size: 38px;
+    /* font-size: 38px; */
+    font-size: 0px;
   }
 
   .back-section {
@@ -971,6 +995,30 @@
 
   .background-inputfix {
     margin-top: 40px;
+    margin-left: 0px;
+  }
+
+  .process-name-head-2 {
+    margin-top: 0px;
+    margin-bottom: -10px;
+  }
+  .process-name-true-2 {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-left: 5px;
+    padding-right: 5px;
+  }
+
+  .process-name-in-2 {
+    font-size: 1.6rem;
+    margin-top: 5px;
+    /* border-top: 1px solid #03a96c67; */
+    border-left: 0px;
+    width: 70%;
+    /* padding-left: 5%;
+    padding-right: 5%; */
+    text-align: center;
   }
 
   .table-user {
@@ -1184,6 +1232,22 @@
 
   .process-header {
     margin-top: 20px;
+  }
+
+  .process-name-true-2 {
+    font-size: 1.6rem;
+  }
+
+  .name-descrip-pro-name-2 {
+    font-family: "Prompt";
+    font-size: 1.3rem;
+    background-color: #8da4c27e;
+    padding: 3px 9px 3px 9px;
+  }
+
+  .process-name-in-2 {
+    text-align: center;
+    width: 85%;
   }
 
   /* .img-right {
