--- a/src/index.css
+++ b/src/index.css
@@ -3092,8 +3092,215 @@ header .logo {
 /* *********  History transaction user  */
 /* ************************************************************************ */
 
+.process-name-history {
+  display: flex;
+  margin-top: -5px;
+  margin-bottom: 15px;
+}
+
+.input-header-big-history {
+  display: flex;
+  margin-top: 35px;
+  margin-bottom: 8px;
+}
+
+.line-history-trans {
+  width: 100%;
+  border-top: 3px solid #fff;
+  margin-left: -5px;
+  margin-bottom: 35px;
+  text-align: center;
+  display: flex;
+  justify-content: center;
+}
+
+.process-his {
+  font-family: "Prompt";
+  font-size: 1.6rem;
+  font-weight: 400;
+  letter-spacing: 1px;
+  display: flex;
+  align-items: center;
+  margin-left: 10px;
+  text-align: start;
+}
+
+.process-name-his {
+  font-family: "Prompt";
+  font-weight: 500;
+  font-size: 1.3rem;
+  background-color: #03a96c75;
+  /* padding: 3px 5px 3px 5px; */
+  border-radius: 6px;
+  -webkit-border-radius: 6px;
+  -moz-border-radius: 6px;
+  -ms-border-radius: 6px;
+  -o-border-radius: 6px;
+  width: 15%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.process-his-point {
+  font-family: "Prompt";
+  font-size: 1.6rem;
+  font-weight: 400;
+  letter-spacing: 1px;
+  display: flex;
+  align-items: center;
+  margin-left: 10px;
+  text-align: start;
+}
+
+.process-name-his-point {
+  font-family: "Prompt";
+  font-weight: 500;
+  font-size: 1.3rem;
+  background-color: #03a96c3a;
+  /* padding: 3px 5px 3px 5px; */
+  border-radius: 6px;
+  -webkit-border-radius: 6px;
+  -moz-border-radius: 6px;
+  -ms-border-radius: 6px;
+  -o-border-radius: 6px;
+  width: 15%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 .table-transactionHis-grid {
   min-height: 100% inherit;
   background-color: #e4e6e5;
   text-align: center;
+}
+
+#table-history-edit {
+  background-color: #03a96ca8;
+  /* background-color: #2f33378a; */
+  color: #fff;
+  /* width: 120px; */
+  /* border: 1px solid #000; */
+}
+
+#no-history-table {
+  width: 50px;
+}
+
+/* #date-history-table {
+  width: 180px;
+} */
+
+.background-history-trans {
+  /* background: #bfc7c33d; */
+  background-color: rgba(255, 255, 255, 0.308);
+  width: 100%;
+  height: 100% inherit;
+  padding: 30px;
+  border-radius: 5px;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  -ms-border-radius: 5px;
+  -o-border-radius: 5px;
+  box-shadow: 0px 0px 8px 0px rgba(10, 10, 10, 0.178);
+  /* box-shadow: 0px 0px 10px 0px rgba(10, 10, 10, 0.404); */
+  margin-bottom: 35px;
+  margin-left: -6px;
+}
+
+.btn-edit-page-history {
+  font-family: "Prompt";
+  font-size: 1.5rem;
+  font-weight: 500;
+  color: #000;
+  background-color: #8da4c2c4;
+  border: 0px;
+  width: 85%;
+  padding: 5px 15px 5px 15px;
+  border-radius: 6px;
+  -webkit-border-radius: 6px;
+  -moz-border-radius: 6px;
+  -ms-border-radius: 6px;
+  -o-border-radius: 6px;
+}
+
+.btn-delete-page-history {
+  font-family: "Prompt";
+  font-size: 1.5rem;
+  font-weight: 500;
+  color: #000;
+  background-color: #8da4c22f;
+  border: 0px;
+  width: 85%;
+  /* width: 90px; */
+  padding: 5px 15px 5px 15px;
+  border-radius: 6px;
+  -webkit-border-radius: 6px;
+  -moz-border-radius: 6px;
+  -ms-border-radius: 6px;
+  -o-border-radius: 6px;
+}
+
+#edit-icon-history {
+  font-size: 2.3rem;
+  margin-right: 5px;
+  margin-bottom: -3px;
+  --ionicon-stroke-width: 46px;
+}
+
+#delete-icon-history {
+  font-size: 2rem;
+  margin-right: 5px;
+  margin-bottom: -3px;
+  --ionicon-stroke-width: 30px;
+}
+
+.btn-recommence-history-year {
+  display: flex;
+  align-items: center;
+  margin-top: 6px;
+}
+
+.his-word-year {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 1.4rem;
+  border-radius: 5px;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  -ms-border-radius: 5px;
+  -o-border-radius: 5px;
+}
+
+.year-number-his {
+  width: 70px;
+  height: 23px;
+  margin: 2px 6px 0 0px;
+  font-weight: 600;
+  color: #fff;
+  background-color: #2f3337d7;
+}
+
+.year-descrip-his {
+  width: 85px;
+  height: 23px;
+  margin: 2px 0px 0 12px;
+  font-weight: 400;
+  font-family: "Prompt";
+  color: #e4e6e5;
+  background-color: #03a96cfd;
+}
+
+.input-header-big-input-history {
+  font-family: "Prompt";
+  font-weight: 500;
+  font-size: 2.7rem;
+}
+
+.back-and-inputfix-history {
+  display: flex;
+  /* width: 100%; */
+  justify-content: space-between;
 }
